# PyTorchTest

./: CMakeLists.txt  README.md  pack_data.py
input/: bps.pth  coords.pth  geometry_parameters.pth  grad_gt.pth  sd_ground_truth.pth  spheres.pth
reference/: d_y3_d_coords.pth  loss_l1_deriv.pth  nn_4th_layer.pth  positions.pth
shaders/: test.comp
src/: ComputeShader.cpp  ComputeShader.h  VulkanGPUDevice.cpp  VulkanGPUDevice.h  main.cpp
